@@ -10,6 +10,7 @@
     <script src="sim-mode-defs.js"></script>
     <script src="basin.js"></script>
     <script src="designations.js"></script>
+    <script src="scale.js"></script>
     <script src="misc.js"></script>
     <script src="sketch.js"></script>
     <link type="text/css" rel="stylesheet" href="style.css" />
